# managarm

./: .clangd  compile_commands.json  meson.build
.github/workflows/: ci.yml  docs.yml  fixups.yml
drivers/libblockfs/src/: libblockfs.cpp  raw.cpp
drivers/libblockfs/src/ext2/: ext2fs.cpp  ext2fs.hpp  ops.cpp
kernel/eir/: meson.build
kernel/eir/arch/uefi/: debug.cpp  efi.hpp  entry.cpp  meson.build
kernel/eir/arch/uefi/efi/: types.h
kernel/eir/arch/x86/: arch.cpp  load64.S
kernel/eir/boot/uefi/: entry.cpp  helpers.cpp  helpers.hpp
kernel/eir/generic/: debug.cpp
kernel/eir/generic/eir-internal/: debug.hpp  error.hpp
kernel/thor/arch/arm/: cpu.cpp  gic.cpp  paging.cpp  stubs.S  trap.cpp
kernel/thor/arch/riscv/: cpu.cpp  paging.cpp  trap.cpp
kernel/thor/arch/x86/: cpu.cpp  ints.cpp  paging.cpp  stubs.S
kernel/thor/generic/: address-space.cpp  fiber.cpp  hel.cpp  ipl.cpp  kernel-log.cpp  main.cpp  schedule.cpp  servers.cpp  service.cpp  stream.cpp  thread.cpp
kernel/thor/generic/thor-internal/: address-space.hpp  fiber.hpp  ipl.hpp  mm-rc.hpp  rcu.hpp  schedule.hpp  thread.hpp  traps.hpp  universe.hpp
kernel/thor/system/acpi/: ec.cpp
kernel/thor/system/dtb/: dtb_discover.cpp
posix/subsystem/src/: epoll.cpp  extern_fs.cpp  fifo.cpp  file.hpp  main.cpp  observations.cpp  pidfd.cpp  pidfd.hpp  process.cpp  process.hpp  pts.cpp  requests.cpp  signalfd.cpp  un-socket.cpp
posix/subsystem/src/devices/: kmsg.cpp
posix/subsystem/src/requests/: filesystem.cpp  (+3 more)
protocols/fs/: fs.bragi
protocols/fs/src/: server.cpp
utils/ci-boot/: ci-boot.py
(+7 files in other folders)
